--- a/GymExercises/src/App.css
+++ b/GymExercises/src/App.css
@@ -1,13 +1,14 @@
 body {
   font-family: 'Josefin Sans';
   background-color: #FFFAFB;
+  
 }
 
 * {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-
+  scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
