Search resutl is added

--- a/GymExercises/src/App.css
+++ b/GymExercises/src/App.css
@@ -44,9 +44,12 @@ body {
 }
 
 .react-horizontal-scrolling-menu--wrapper {
+  margin-top: 40px;
   width: 100%;
   display: flex;
+  /* background-color: red; */
   flex-wrap: wrap;
+  overflow: hidden;
 }
 
 .detail-image {
@@ -84,13 +87,15 @@ body {
 }
 
 .bodyPart-card {
+  margin: 10px;
   transform: scale(1, 1);
   transition: 0.3s all ease-in-out;
 }
 
 .exercise-card:hover,
 .bodyPart-card:hover {
-  transform: scale(1.1, 1.1);
+  /* transform: scale(1.1, 1.1); */
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .search-btn:hover {
